[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"
authors = ["Hedonwang <171725713@qq.com>"]
description = "A simple grep tool for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
colored = "2.1.0"
glob = "0.3.1"
regex = "1.11.1"
